other-cel/check-serviceaccount-secrets/.chainsaw-test/bad-svc-account.yaml
apiVersion: v1
kind: ServiceAccount
metadata:
  name: bad-svc-account-02
  namespace: default
secrets:
  - name: example-automated-thing-token-zyxwv
