other-cel/check-serviceaccount-secrets/.chainsaw-test/chainsaw-test.yaml
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: check-service-accounts
spec:
  steps:
  - name: step-01
    try:
    - script:
        content: |
          sed 's/validationFailureAction: Audit/validationFailureAction: Enforce/' ../check-serviceaccount-secrets.yaml | kubectl create -f -
    - assert:
        file: policy-ready.yaml
  - name: step-02
    try:
    - apply:
        file: good-svc-account.yaml
    - apply:
        expect:
        - check:
            ($error != null): true
        file: bad-svc-account.yaml
  - name: step-99
    try:
    - delete:
        ref:
          apiVersion: kyverno.io/v1
          kind: ClusterPolicy
          name: check-serviceaccount-secrets
